--- a/app.json
+++ b/app.json
@@ -6,11 +6,11 @@
         "Auto",
         "Filter",
         "Telegram Bot",
-        "TroJanzHEX"
+        "MoTechYT"
     ],
     "website": "https://TroJanzHEX.me",
-    "repository": "https://github.com/TroJanzHEX/Auto-Filter-Bot",
-    "success_url": "https://telegram.dog/TroJanzHEX",
+    "repository": "https://github.com/MRK-YT/Auto-Filter-Bot",
+    "success_url": "https://telegram.dog/Mo_Tech_YT",
     "env": {
         "TG_BOT_TOKEN": {
             "description": "You Telegram Bot Token from @BotFather",
