--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "Telegram Bot",
         "MoTechYT"
     ],
-    "website": "https://TroJanzHEX.me",
+    "website": "https://github.com/MRK-YT/",
     "repository": "https://github.com/MRK-YT/Auto-Filter-Bot",
     "success_url": "https://telegram.dog/Mo_Tech_YT",
     "env": {
